fix: hide initial nav flicker

--- a/src/features/Navigation/slotsList.module.css
+++ b/src/features/Navigation/slotsList.module.css
@@ -1,3 +1,6 @@
 .slots-list {
   scrollbar-width: none;
+  &.hidden {
+    visibility: hidden;
+  }
 }
